--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,17 @@
-fastapi>=0.42.0
-mangum>=0.7.0
-pytest
-requests
+annotated-types==0.5.0
+anyio==3.7.1
+certifi==2023.7.22
+click==8.1.6
+exceptiongroup==1.1.2
+fastapi==0.100.1
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+idna==3.4
+mangum==0.17.0
+pydantic==2.1.1
+pydantic-core==2.4.0
+sniffio==1.3.0
+starlette==0.27.0
+typing-extensions==4.7.1
+uvicorn==0.23.1
