--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,14 +17,15 @@ jobs:
           python-version: "3.8"
 
       - name: Instalar dependencias
+        working-directory: app
         run: |
           python -m pip install --upgrade pip
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Correr pruebas unitarias con pytest
+        working-directory: app
         run: |
-          cd app
           pytest
 
   build:
@@ -47,6 +48,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
       
       - name: Build y push de la imagen a Amazon ECR
+        working-directory: app
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: reto1-digitalnao
