--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Correr pruebas unitarias, y construccion y push de la imagen
+name: Build y push de la imagen
 
 on:
   pull_request:
@@ -6,31 +6,6 @@ on:
       - main
 
 jobs:
-  testing:
-    runs-on: ubuntu-latest
-    name: Ejecución de pruebas unitarias
-
-    steps:
-      - name: Checkout del codigo
-        uses: actions/checkout@v2
-
-      - name: Configurando Python 3.8
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-
-      - name: Instalar dependencias
-        working-directory: app
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Correr pruebas unitarias con pytest
-        working-directory: app
-        run: |
-          pytest
-
   build:
     runs-on: ubuntu-latest
     name: Build y Push a ECR
